# stock-analyzer-crew

./: .env.example  .gitignore  README.md  pyproject.toml
src/research_crew/: crew.py  main.py
src/research_crew/config/: agents.yaml  tasks.yaml
src/research_crew/tools/: valuation_metrics_tool.py
